--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
     "graphql": "^14.0.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
