--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^14.0.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5"
   },
