--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apollo": "^2.1.11",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.5.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
